# mailpulse

./: .gitignore  IMPROVEMENT_PLAN.md  LICENSE  README.md
.github/workflows/: ci-admin.yml  ci-engine.yml  lint.yml
admin/: .buildtrigger  package-lock.json  package.json
admin/src/: proxy.ts
admin/src/app/: globals.css  layout.tsx
admin/src/app/dashboard/: layout.tsx  page.tsx
admin/src/components/: language-switcher.tsx
admin/src/lib/: lark.ts  supabase.ts  types.ts
engine/: .env.example  EMAIL_DIGEST_PLAN_V2.md  pyproject.toml  railway.toml
engine/migrations/: 001_enterprise_schema.sql  002_events_audit_notifications.sql  003_schedules.sql  004_company_domains.sql  005_person_emails.sql  006_manual_triggers.sql  007_sync_schedule_type.sql  008_lark_phone.sql  009_lark_base_calendar.sql  010_lark_primary.sql  011_secretary_features.sql  012_p0_fixes.sql  013_audit_fixes.sql  014_lark_topics.sql  015_person_identities.sql
engine/scripts/: get_gmail_token.py  refresh_gmail_token.py  refresh_gmail_token.sh  setup_telegram.py  test_db_connection.py
engine/src/: config.py  entrypoint.py  main.py
engine/src/bot/: daily_todo.py  helpers.py  hourly_sync.py  ingest.py  introduce.py  lark_callback.py  lark_chat_context.py  lark_message.py  query.py  server.py  token_health_check.py  weekly_report.py
engine/src/destinations/: docx_report.py  lark.py  lark_base.py  lark_calendar.py  lark_calendar_acl.py  lark_cards.py  lark_topics.py  pdf_report.py  supabase_upload.py  telegram.py
engine/src/processors/: calendar_extractor.py  calendar_sync.py  client_extractor.py  escalation.py  followup.py  reclassifier.py  report_generator.py  sla_checker.py  two_pass.py
engine/src/sources/: gmail_source.py
engine/src/storage/: action_items.py  audit.py  clients.py  db.py  digest_runs.py  emails.py  employee_discovery.py  events.py  identity.py  threads.py
engine/src/utils/: holidays.py
engine/tests/: conftest.py  test_digest.py  test_gmail_source.py  test_hourly_sync_smoke.py  test_permissions.py  test_reclassifier.py  test_scoring.py  test_thread_state.py
(+40 files in other folders)
