[project]
name = "email-digest"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "supabase>=2.4.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.1.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "lark-oapi>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "tests",
    "scripts",
    "migrations",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501",  # line-too-long (codebase has long lines we accept)
    "E402",  # module-import-not-at-top-of-file (intentional lazy imports)
    "F401",  # unused-import (common during refactor; revisit later)
    "F541",  # f-string-missing-placeholders (cosmetic)
    "F841",  # unused-variable (common during refactor)
    "E741",  # ambiguous-variable-name (math code uses single-letter names)
]
